Disabeling Bug fixed

--- a/PHP/Fall_Festival/resources/css/index_style_sheet.css
+++ b/PHP/Fall_Festival/resources/css/index_style_sheet.css
@@ -26,7 +26,7 @@ body{
     margin-right: auto;
 }
 #h_div{
-	background-image:url(../images/leaf.png);
+	background-image:url(../images/fall.png);
 	background-repeat:no-repeat;
 }
 #quote_div{
